# MuSE

./: .gitignore  AUTHORS  ChangeLog  KNOWN-BUGS  Makefile.am  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  muse.1
CVSROOT/: cvswrappers  (+1 more)
doc/: Makefile.am  muse.1  muse.doxygen  muse.doxygen.in
lib/portaudio/: Makefile.am  pa_convert.c  pa_host.h  pa_lib.c  pa_mac.c  pa_mac_core.c  pa_unix_oss.c  pa_unix_solaris.c  ringbuffer.c
muse-0.8/src/: Makefile.am  dec_mp3.cpp  dec_ogg.h  dec_snd.cpp  dec_snd.h  decoder.h  generic.h  gui.cpp  gui.h  in_mpeg.cpp  in_oggvorbis.cpp  in_oggvorbis.h  inchannels.cpp  inchannels.h  jmixer.cpp  jmixer.h  jutils.cpp  jutils.h  linklist.cpp  linklist.h  muse.cpp  out_vorbis.cpp  out_vorbis.h  outchannels.cpp  outchannels.h  pipe.h  playlist.cpp  playlist.h  resarr160to441.h  shouter.cpp  shouter.h
muse-0.8/src/gtkgui/: Makefile.am  TODO  filedump.h  gchan_events.cpp  ice.cpp  ice.h  listpack.h  tX_knobloader.cpp  utils.cpp  utils.h
muse-0.8/src/gtkgui/xpm/: stop.xpm
muse-0.8/src/gtkgui2/: Makefile.am  about.cpp  about.h  encoder.h  filedump.cpp  gchan.cpp  gchan.h  gchan_events.cpp  gchan_events.h  gen.h  gtk2_gui.cpp  gtkdial.cpp  ice.cpp  listpack.cpp  musegtk.cpp  utils.cpp  vumeters.cpp  xmlprofile.cpp  xmlprofile.h
muse-0.8/src/gtkgui2/xpm2/: asbepallo.h  delch.xpm  newch.xpm  remove.xpm  speaker.xpm
muse-0.8/src/libmpeg/: AUTHORS  Makefile.am  mpeglayer3.cc  mpegsound.h
muse-0.8/src/ncursesgui/: Makefile.am  debug.h  encdata.h  encsetbox.cpp  entry.h  fselect.cpp  itemlist.cpp  menu.cpp  muse_tui.h  screen.cpp  single_channel.cpp  single_channel.h  slider.cpp
muse-0.8/src/resample/: float_cast.h  samplerate.c  src_linear.c  src_sinc.c
muse-0.8/src/shout/: avl.h  mp3.c  shout_private.h  thread.h  timing.h
muse-0.9/: AUTHORS  ChangeLog  KNOWN-BUGS  Makefile.am  NEWS  README  USAGE  autogen.sh  config.h.in  configure.in  muse.1  muse.xpm
muse-0.9/debian/: README.Debian  changelog  control  control.in  menu  rules
muse-0.9/doc/: USAGE
muse-0.9/m4/: aclocal.m4  vorbis.m4
muse-0.9/muse-osx/: Info.plist  buffer_inspector.cpp  buffer_inspector.h  carbon_channel.cpp  carbon_channel.h  carbon_common.h  carbon_gui.cpp  carbon_gui.h  carbon_message.cpp  carbon_message.h  carbon_stream.cpp  carbon_stream.h  config.h  credits.cpp  credits.h  credits.rsrc  muse-icon.icns  muse_icons.r  muse_icons.rsrc  open_dialog.c  open_dialog.h  playlist_manager.cpp  playlist_manager.h  stream_encoder.cpp  stream_encoder.h  stream_server.cpp  stream_server.h
muse-0.9/muse-osx/English.lproj/: InfoPlist.strings
muse-0.9/muse-osx/muse-osx.xcode/: project.pbxproj
muse-0.9/muse-osx/muse-osx.xcodeproj/: project.pbxproj
muse-0.9/old/: amuse  scheduler.h
muse-0.9/po/: Makefile  Makefile.in  it.po  muse.pot
muse-0.9/src/: Makefile.am  audioproc.cpp  dec_jack.h  dec_mp3.cpp  dec_mp3.h  dec_ogg.cpp  dec_ogg.h  dec_snd.cpp  dec_snd.h  decoder.h  dev_sound.cpp  dev_sound.h  generic.h  gui.cpp  gui.h  httpstream.cpp  in_mpeg.cpp  in_mpeg.h  in_oggvorbis.cpp  inchannels.cpp  inchannels.h  jmixer.cpp  jmixer.h  jutils.cpp  jutils.h  linklist.cpp  linklist.h  muse.cpp  out_lame.cpp  out_lame.h  out_vorbis.cpp  outchannels.cpp  outchannels.h  pablio.cpp  pablio.h  pipe.cpp  pipe.h  playlist.cpp  playlist.h  profile.cpp  (+8 more)
muse-0.9/src/gtkgui/: README  encoder.cpp  gtk_gui.cpp  vumeters.cpp
muse-0.9/src/gtkgui2/: Makefile.am  about.cpp  docking.cpp  encoder.cpp  filedump.h  gchan.cpp  gchan.h  gchan_events.cpp  gchan_events.h  gen.h  gradiosched.cpp  gtk2_gui.cpp  gtk2_gui.h  ice.cpp  ice.h  listpack.cpp  musegtk.cpp  radiosched.cpp  radiosched.h  utils.cpp  utils.h  vumeters.cpp  vumeters.h  xmlprofile.cpp  xmlprofile.h
muse-0.9/src/libmpeg/: fileplayer.cc  httpinput.cc  mpegsound.h
muse-0.9/src/ncursesgui/: appunti  connectbox.cpp  connectbox.h  fselect.h  label.cpp  menu.h  muse_console.h  muse_tui.cpp  ncurses_gui.h  scroll.h  streamsetbox.h
muse-0.9/src/portaudio/: Makefile.am  Makefile.in  pa_mac.c  pa_mac_core.c  pa_unix.c  pa_unix_oss.c  pablio.c
muse-0.9/src/resample/: common.h  samplerate.c  src_sinc.c  src_zoh.c
muse-0.9/src/shout/: Makefile.am  avl.c  avl.h  httpp.c  httpp.h  resolver.c  shout.c  shout.h  sock.h  thread.c  thread.h  timing.h  vorbis.c
src/: Makefile.am  dec_jack.cpp  dec_mp3.h  dec_ogg.h  decoder.cpp  decoder.h  dev_sound.cpp  dev_sound.h  generic.h  httpstream.cpp  httpstream.h  inchannels.cpp  inchannels.h  jmixer.cpp  jmixer.h  jutils.h  lame_wrap.cpp  lame_wrap.h  linklist.cpp  muse.cpp  out_lame.cpp  out_lame.h  out_vorbis.cpp  out_vorbis.h  outchannels.cpp  outchannels.h  pipe.cpp  pipe.h  playlist.h  radiosched.cpp  shouter.cpp  shouter.h  vumeter.c  xmlprofile.cpp  xmlprofile.h
src/gtkgui/: docking.cpp  docking.h  gchan_events.h  musegtk.cpp  musegtk.h  vumeters.h
src/gtkgui2/: Makefile.am  about.h  docking.cpp  docking.h  encoder.cpp  encoder.h  filedump.cpp  filedump.h  gchan.cpp  gchan_events.cpp  gradiosched.cpp  gtk2_gui.cpp  gtkdial.cpp  ice.cpp  ice.h  musegtk.h  utils.cpp  utils.h  vumeters.cpp
src/gtkgui2/xpm2/: dock.xpm  forward.xpm  freaknet.h  line_in.xpm  mic.xpm  newch.xpm  pause.xpm  play.xpm  rastasoft.h  rewind.xpm  speaker.xpm  stop.xpm  stream.xpm  vu.xpm
src/libmpeg/: Makefile.am  mpegtoraw.cc
src/ncursesgui/: Makefile.am  connectbox.cpp  encsetbox.cpp  encsetbox.h  itemlist.h  label.h  muse_console.cpp  ncurses_gui.cpp  ncurses_gui.h  screen.h  scroll.cpp  streamsetbox.cpp  testgui.sh
src/ncursesgui/libcdk/: Makefile.am  binding.h  calendar.c  calendar.h  cdk.h  cdk_objs.h  curdefs.h  draw.h  graph.c  itemlist.c  mentry.c  mentry.h  position.c  scale.c  scroll.h  viewer.c
src/ncursesgui/old/: cdkbbox.h
src/obsolete/gtkgui/: gchan.cpp  gchan.h  gtk_gui.h  tX_dial.cpp  tX_dial.h  tX_knobloader.h
src/portaudio/: Makefile.am  pa_unix.c  pa_unix.h  portaudio.h  ringbuffer.h
src/resample/: Makefile  Makefile.in
src/resample/.deps/: samplerate.Po  src_linear.Po  src_sinc.Po  src_zoh.Po
src/shout/: Makefile.am  httpp.c  mp3.c  shout_private.h  thread.c
(+174 files in other folders)
