SUBDIRS = lib src

dist_docs_DATA = README COPYING AUTHORS NEWS KNOWN-BUGS ChangeLog TODO USAGE
docsdir = ${prefix}/doc/MuSE

dist_man_MANS = muse.1

ACLOCAL_AMFLAGS = -I m4

# FIXME doc should be in SUBDIRS and properly autotoolized
# FIXME po should be properly gettexited
EXTRA_DIST = autogen.sh doc po utils
